@@ -62,32 +62,32 @@ if (!$gallery->session->offline ||
   <link rel="top" href="<?php echo makeGalleryUrl('albums.php', array('set_albumListPage' => 1)) ?>" >
 <?php }
 
-    if( !empty($gallery->album->fields["linkcolor"]) ||
-	!empty($gallery->album->fields["bgcolor"]) ||
-	!empty($gallery->album->fields["textcolor"])) {
+if( !empty($gallery->album->fields["linkcolor"]) ||
+    !empty($gallery->album->fields["bgcolor"]) ||
+    !empty($gallery->album->fields["textcolor"])) {
 
-	echo "\n<style type=\"text/css\">";
-	// the link colors have to be done here to override the style sheet
-	if ($gallery->album->fields["linkcolor"]) {
-		echo "\n  a:link, a:visited, a:active {";
-		echo "\n	color: ".$gallery->album->fields['linkcolor'] ."; }";
-		echo "\n  a:hover { color: #ff6600; }";
+    echo "\n<style type=\"text/css\">";
+    // the link colors have to be done here to override the style sheet
+    if ($gallery->album->fields["linkcolor"]) {
+        echo "\n  a:link, a:visited, a:active {";
+        echo "\n	color: ".$gallery->album->fields['linkcolor'] ."; }";
+        echo "\n  a:hover { color: #ff6600; }";
 
-	}
-	if ($gallery->album->fields["bgcolor"]) {
-		echo "body { background-color:".$gallery->album->fields['bgcolor']."; }";
-	}
-	if (isset($gallery->album->fields['background']) && $gallery->album->fields['background']) {
-		echo "body { background-image:url(".$gallery->album->fields['background']."); } ";
-	}
-	if ($gallery->album->fields["textcolor"]) {
-		echo "body, tf {color:".$gallery->album->fields['textcolor']."; }";
-		echo ".head {color:".$gallery->album->fields['textcolor']."; }";
-		echo ".headbox {background-color:".$gallery->album->fields['bgcolor']."; }";
-	}
-
-	echo "\n  </style>";
     }
+    if ($gallery->album->fields["bgcolor"]) {
+        echo "body { background-color:".$gallery->album->fields['bgcolor']."; }";
+    }
+    if (isset($gallery->album->fields['background']) && $gallery->album->fields['background']) {
+        echo "body { background-image:url(".$gallery->album->fields['background']."); } ";
+    }
+    if ($gallery->album->fields["textcolor"]) {
+        echo "body, tf {color:".$gallery->album->fields['textcolor']."; }";
+        echo ".head {color:".$gallery->album->fields['textcolor']."; }";
+        echo ".headbox {background-color:".$gallery->album->fields['bgcolor']."; }";
+    }
+
+    echo "\n  </style>";
+}
 ?>
 </head>
 
