@@ -1,3 +1,12 @@
+2006-07-29 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j102-UNSTABLE
+
+ * Fix: HTML ans JS Fixes in slideshow.
+
+ * Show only skins with a .default file in config wizard
+   (Will be reverted when all skins are 1.6 compliant)
+
+ * Some indenting.
+ 
 2006-07-29 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j101-UNSTABLE
 
  * Jenskin -> 1.6
